gccida/c0/canon_hash
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_hash/src/cse.c:2699:34: error: must use 'enum' tag to refer to type 'machine_mode'
unsigned int  canon_hash( rtx x, machine_mode mode) 
                                 ^
                                 enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_hash/src/cse.c:2711:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+6Ch] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_hash/src/cse.c:2747:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( **( _DWORD **)( *( _QWORD *)&x[2] + 8LL * ib + 8))); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_hash/src/cse.c:2747:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( **( _DWORD **)( *( _QWORD *)&x[2] + 8LL * ib + 8))); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_hash/src/cse.c:2813:28: error: use of undeclared identifier 'machine_mode'
hash += canon_hash( elt, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)elt)); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_hash/src/cse.c:2813:43: error: expected expression
hash += canon_hash( elt, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)elt)); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_hash/src/cse.c:2838:10: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
record = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] == MODE_CC; 
         ^~~~~~~~~~~~
         mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_hash/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_hash/src/cse.c:2848:2: error: expected expression
 struct cse_reg_info = cached_cse_reg_info; 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_hash/src/cse.c:2850:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( regno); 
 ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/canon_hash/src/obj/cse.o] Error 1
